<package format="2">
  <name>openloong_mw</name>
  <version>1.0.0</version>
  <description>
  <p>URDF Description package for urdf</p>
  <p>This package contains configuration data, 3D models and launch files
  for urdf robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>joint_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>

  <build_depend>rospy</build_depend>

  <build_depend>xacro</build_depend>

  <build_depend>urdf</build_depend>
  <build_depend>jsk_rviz_plugins</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_export_depend>roscpp</build_export_depend>

  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>jsk_rviz_plugins</build_export_depend>
  <build_export_depend>xacro</build_export_depend>

  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>xacro</exec_depend> 

  <exec_depend>urdf</exec_depend>

  <depend>sensor_msgs</depend>

  <depend>std_msgs</depend>j
 
  <depend>boost</depend>

  <export>
    <architecture_independent />
  </export>
</package>
